# adversarialComparator

./: .codecov.yml  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  DISCLAIMER.md  LICENSE.md  PHASE1_SUMMARY.md  QUICKSTART.md  README.md  app.py  pyproject.toml  requirements.txt  run_app.py  start.sh  status.sh  stop.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  pr-check.yml
docs/: ARCHITECTURE.md  CI_CD_GUIDE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
src/: __init__.py
src/attacks/: attack_factory.py  base_attack.py  fgsm_attack.py  pgd_attack.py  targeted_fgsm.py
src/config/: settings.py
src/models/: base_model.py  model_factory.py  resnet_model.py
src/utils/: image_processing.py
tests/: test_app_integration.py  test_basic.py  test_basic_ci.py  test_button_activation.py  test_button_fix.py  test_image_upload.py  test_loop_fix.py  test_model_loading.py  test_simple.py  test_stable_app.py  test_streamlit_validation.py
